--- a/css/global.css
+++ b/css/global.css
@@ -50,7 +50,7 @@ h2,
 h3 {
 	text-align: center;
 	font-family: "Noto Serif", serif;
-	text-shadow: 0px 0px 6px white;
+	text-shadow: 0px 0px 6px rgb(255, 255, 255);
 }
 h1 {
 	font-size: var(--h1__font-size);
